WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277798
REGRESSION(
280578@main
): Causes repaint issues on <
http://music.youtube.com|music.youtube.com
>
https://bugs.webkit.org/show_bug.cgi?id=277798
Summary
REGRESSION(280578@main): Causes repaint issues on <http://music.youtube.com|m...
WebKit Commit Bot
Reported
2024-08-08 07:02:09 PDT
https://commits.webkit.org/280578@main
introduced a regression: Causes repaint issues on <
http://music.youtube.com|music.youtube.com
> This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of 280578@main
(8.92 KB, patch)
2024-08-08 07:02 PDT
,
WebKit Commit Bot
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
WebKit Commit Bot
Comment 1
2024-08-08 07:02:18 PDT
Created
attachment 472081
[details]
REVERT of
280578@main
Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
EWS
Comment 2
2024-08-08 07:25:05 PDT
Committed
281989@main
(6ae7550718f6): <
https://commits.webkit.org/281989@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472081
[details]
.
Radar WebKit Bug Importer
Comment 3
2024-08-08 07:26:15 PDT
<
rdar://problem/133459940
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug