Cherry-pick 6ae7550718f6. rdar://133402480

Unreviewed, reverting 280578@main.
    https://bugs.webkit.org/show_bug.cgi?id=277798

    Causes repaint issues on <http://music.youtube.com|music.youtube.com>

    Reverted changeset:

    "RenderElement::dirtyLinesFromChangedChild should only be called on svg content"
    https://bugs.webkit.org/show_bug.cgi?id=276103
    https://commits.webkit.org/280578@main

    Canonical link: https://commits.webkit.org/281989@main

Canonical link: https://commits.webkit.org/280938.207@safari-7619.1.26.31-branch