Source/WebCore/rendering/RenderElement.cpp
@@ -1095,6 +1095,9 @@ void RenderElement::willBeRemovedFromTree()
     if (firstChild() || hasLayer())
         removeLayers();
 
+    if (isOutOfFlowPositioned() && parent()->childrenInline())
+        checkedParent()->dirtyLinesFromChangedChild(*this);
+
     RenderObject::willBeRemovedFromTree();
 }
 
